<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/game_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <android.widget.Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_menu"
            android:paddingVertical="14dp"
            android:text="@string/menu_start"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <android.widget.Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_menu"
            android:paddingVertical="14dp"
            android:text="@string/menu_settings"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <android.widget.Button
            android:id="@+id/btnItemInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:paddingVertical="14dp"
            android:text="@string/menu_item_info"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
